Bug 218114 - Keyboard not working after boot on ASUS ExpertBook B1402CVA
Summary: Keyboard not working after boot on ASUS ExpertBook B1402CVA
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P3 blocking
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-07 18:25 UTC by Jacek Folwarczny
Modified: 2023-11-15 18:06 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Jacek Folwarczny 2023-11-07 18:25:03 UTC
Hi, 
my laptops keyboard does not work after boot in every distro tried. It works in windows and GRUB. I tried similar thing, that was done in https://bugzilla.kernel.org/show_bug.cgi?id=217901 and it worked.

I just added to drivers/acpi/resource.c :

static const struct dmi_system_id asus_laptop[] = {
.......
        {
                .ident = "Asus Expertbook B1402CVA",
                .matches = {
                        DMI_MATCH(DMI_SYS_VENDOR, "ASUSTeK COMPUTER INC."),
                        DMI_MATCH(DMI_BOARD_NAME, "B1402CVA"),
                },
        },
......

then compiled custom kernel and keyboard works just fine.

Is there a way for it to be added to future kernels?
Thanks a lot in advance!
Comment 1 Artem S. Tashkinov 2023-11-09 10:21:27 UTC
Hans, please take a look.
Comment 2 Artem S. Tashkinov 2023-11-09 11:03:34 UTC
TBO I don't like this huge amount of quirks.

It's hard to believe Windows has got any, so there seems to be a different issue at play, i.e. Linux doesn't handle something that Windows does.
Comment 3 Artem S. Tashkinov 2023-11-14 05:55:18 UTC
Ping again.
Comment 4 Hans de Goede 2023-11-15 18:05:57 UTC
Jacek, thank you for reporting this. I have submitted a patch adding the quirk to the upstream / mainline kernel here:

Artem, thank you for bringing this to my intention, but next time please wait at least 10 days before sending a ping. I did see your original ping but I have a lot on my plate and extra pings do not help.

As for the amount of quirks I also do not like this. I have been discussing alternative ways to fix this with some other kernel developers. But there is no easy / quick fix for this. Until someone can make a significant of time free to look deeper into this (with access to at least one affected laptop) we will have to live with the quirks.
Comment 5 Hans de Goede 2023-11-15 18:06:27 UTC
I forgot to add the link to the upstream patch, here it is:

https://lore.kernel.org/linux-acpi/20231115180222.10436-1-hdegoede@redhat.com/

Note You need to log in before you can comment on or make changes to this bug.